--- a/Fundamentos/Bloco_7_introducao_javascript_ES6_e_testes_unitarios/dia-3-primeiros-passos-em-jest/exercicios-aula/package.json
+++ b/Fundamentos/Bloco_7_introducao_javascript_ES6_e_testes_unitarios/dia-3-primeiros-passos-em-jest/exercicios-aula/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "script.js",
   "scripts": {
-    "test": "Jest"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
