--- a/Back-end/Bloco-22-introducao-ao-nodeJS/dia-3-Testes-de-integracao/exercicios-fixacao/cacao-trybe/package.json
+++ b/Back-end/Bloco-22-introducao-ao-nodeJS/dia-3-Testes-de-integracao/exercicios-fixacao/cacao-trybe/package.json
@@ -2,9 +2,10 @@
   "name": "execicio1",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/server.js",
   "scripts": {
-    "test": "mocha ./tests/integration --exit"
+    "test": "mocha ./tests/integration --exit",
+    "dev": "nodemon ./src/server.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +14,7 @@
     "chai": "^4.3.6",
     "chai-http": "^4.3.0",
     "mocha": "^10.0.0",
+    "nodemon": "^2.0.19",
     "sinon": "^14.0.0"
   },
   "dependencies": {
